@@ -40,9 +40,15 @@
 # https://www.random.org/passwords/?num=1&len=32&format=plain&rnd=new
 PANOPTICON_SECRET=00CHANGEme00changeME00ChangeMe00
 
+# Use Default PHP Session Save Path
+# Set true to use the configure PHP session save path on your server. Set false
+# to always use `tmp/session`.
+PANOPTICON_SESSION_USE_DEFAULT_PATH=true
+
 # Session Path Levels
 # Sessions will be stored in this many directory levels. Set to 1 or 2 if you
-# have thousands of concurrent sessions.
+# have thousands of concurrent sessions. Only applies when the option above
+# (PANOPTICON_SESSION_USE_DEFAULT_PATH) is set to false.
 PANOPTICON_SESSION_SAVE_LEVELS=0
 
 # Encrypt Session Data
