@@ -1237,6 +1237,8 @@ PANOPTICON_SYSCONFIG_NO_EXTENSIONS_BODY="Set up your sites and wait until their 
 PANOPTICON_SYSCONFIG_LBL_FIELD_LIVE_SITE="Panopticon URL"
 PANOPTICON_SYSCONFIG_LBL_FIELD_LIVE_SITE_HELP="The base URL of your Panopticon installation. Used when sending email from unattended tasks."
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_TIMEOUT="Session Timeout"
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_USE_DEFAULT_PATH="Use Default PHP Session Save Path"
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_USE_DEFAULT_PATH_HELP="When enabled, Panopticon uses the <code>session.save_path</code> in your PHP configuration for saving PHP session data files. When disabled, Panopticon uses the <code>tmp/session</code> folder under your web root."
 PANOPTICON_SYSCONFIG_LBL_FIELD_TIMEZONE="Time Zone"
 PANOPTICON_SYSCONFIG_LBL_FIELD_DEBUG="Debug System"
 PANOPTICON_SYSCONFIG_LBL_FIELD_LOGIN_FAILURE_ENABLE="Automatic IP block on failed login attempts"
@@ -1336,7 +1338,7 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_BEHIND_LOAD_BALANCER="Behind load balancer / reve
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_ENCRYPT="Encrypt session data"
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_ENCRYPT_HELP="Session data will be stored on disk encrypted with a secret key unique to your Panopticon installation."
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_SAVE_LEVELS="Session Path Levels"
-PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_SAVE_LEVELS_HELP="Session save data files will be saved this many folders deep. 0 means all files in a single folder. Best keep it 0 unless you have thousands of concurrent sessions."
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_SAVE_LEVELS_HELP="Session save data files will be saved this many folders deep. 0 means all files in a single folder. Best keep it 0 unless you have thousands of concurrent sessions. Only applies when Use Default PHP Session Save Path is disabled."
 PANOPTICON_SYSCONFIG_LBL_EXTENSIONS_TABLE_CAPTION="Table of known extensions and their automatic update preferences"
 PANOPTICON_SYSCONFIG_LBL_EXTENSIONS_CMS="CMS Type"
 PANOPTICON_SYSCONFIG_LBL_EXTENSIONS_NAME="Extension name"
