@@ -21,7 +21,7 @@ class Sysconfig extends Controller
 	private const CHECKBOX_KEYS = [
 		'debug', 'behind_load_balancer', 'stats_collection', 'proxy_enabled', 'phpwarnings', 'log_rotate_compress', 'dbencryption', 'dbsslverifyservercert', 'dbbackup_auto', 'dbbackup_compress', 'mail_online', 'mail_inline_images', 'smtpauth',
 		 'login_failure_enable', 'login_lockout_extend', 'avatars', 'password_hibp',
-		'session_encrypt'
+		'session_encrypt', 'session_use_default_path'
 	];
 
 	public function execute($task)
